<?xml version="1.0"?>
<package format="2">
  <name>optical_flow_array_msgs</name>
  <version>0.0.1</version>
  <description>
    messages for oprical flow array
  </description>

  <maintainer email="feng.xiao16@imperial.ac.uk">Feng Xiao</maintainer>

  <author>Feng Xiao</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
</package>
